<copy> re-wrote contact info

--- a/contact.html
+++ b/contact.html
@@ -104,8 +104,8 @@
 
         <section id="form">
             <div class="left-section">
-                <h2 class="title">Send a Message</h2>
-                <p>If you have any questions or concerns please feel free to reach out to us.  We respond to every call and email.</p>
+                <h2 class="title">Send us Feedback</h2>
+                <p>If you have any questions then please shoot us an email. Please CALL to book an appointment.</p>
                 <form id="contact" name="Contact Form2" method="post" data-netlify="true">
                         <div class="input-group">
                             <label for="name">Full Name</label>
