--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                      <p>
                          All prices are from, if you have a specific style in mind or picture, then bring that along and <strong>PRIME</strong> will do our best to get you the style you are looking for. 
                      </p>
-                     <a class="button-solid" href="./contact.html">Contact to Book</a>
+                     <a class="button-solid" href="./contact.html">Call to Book</a>
                 </div>
                 <picture class="image-box">
                      <source media="(max-width: 600px)" srcset="./images/ExtraContentImg.jpg">
@@ -257,7 +257,7 @@
             <div class="container">
                 <h2 class="title">Come on Down </h2>
                 <p>
-                    Contact to book, or feel free to head down to our shop in Hoole and get a walk-in appointment.
+                    Call us to book an appointment, or feel free to head down to our shop in Hoole and get a walk-in appointment.
                 </p>
                 <a href="./contact.html" class="button-solid">Find out where we are</a>
             </div>
@@ -283,18 +283,10 @@
                     <ul>
                         <li><h2>Information</h2></li>
                         <li><a href="./index.html">Home</a></li>
-                        <!-- <li><a href="./about.html">About Us</a></li> -->
                         <li><a href="./projects.html">Gallery</a></li>
                         <li><a href="./testimonials.html">Reviews</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
-                    <!-- <ul>
-                        <li><h2>Services</h2></li>
-                        <li>Service1</li>
-                        <li>Service2</li>
-                        <li>Service4</li>
-                        <li>Service5</li>
-                    </ul> -->
                     <ul>
                         <li><h2>Contact</h2></li>
                         <li><a href="./contact.html">18A Faulkner St,<br> Hoole, Chester CH2 3BD</a></li>
