--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,8 @@
         </div>
         <div class="container">
             <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
-            <a class="logo" aria-label="click to go to home page" href="/index.html">PRIME BARBER
+            <a class="logo" aria-label="click to go to home page" href="/index.html">
+                <div class="logo">PRIME BARBER</div>
                                 
             </a>
 
@@ -167,9 +168,9 @@
             <div class="container">
                 <h2 class="title">Like what you see? <br> Come on in!</h2>
                 <p>
-                    Based in Faulkner Street, Hoole Village, just 5 minutes from the city center!.
+                    Based in Faulkner Street, Hoole Village, just 5 minutes from the city center!
                 </p>
-                <a href="/contact.html" class="button-solid">Location</a>
+                <a href="/contact.html" class="button-solid">Call to book!</a>
             </div>
             <picture>
                 <source media="(max-width: 600px)" srcset="/images/apothecary132.jpg">
