--- a/reviews.html
+++ b/reviews.html
@@ -57,7 +57,9 @@
         </div>
         <div class="container">
             <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
-            <a class="logo" aria-label="click to go to home page" href="./index.html">PRIME BARBER</a>
+            <a class="logo" aria-label="click to go to home page" href="./index.html">
+                <div class="logo">PRIME BARBER</div>
+            </a>
 
             <!--Main Nav-->
             <nav id="navbar-menu">
@@ -204,7 +206,7 @@
                 <p>
                     Opening hours can be found on the contact page. We are located in Hoole Village, just outside the city center!
                 </p>
-                <a href="./contact.html" class="button-solid">Contact!</a>
+                <a href="./contact.html" class="button-solid">Call to book!</a>
             </div>
             <picture>
                 <source media="(max-width: 600px)" srcset="./images/review-footer.jpg">
