<update> Updated placeholders for contact form

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,6 @@
                             <input id="email" aria-label="email" class="input1 right" name="email" placeholder="Email Address" type="email" tabindex="2" required>
                             <div aria-hidden="true" class="hover-box"></div>
                         </div>
-
                         <div class="input-group">
                             <label for="phone">Phone</label>
                             <input id="phone" aria-label="phone number" class="input1" name="phone" placeholder="Phone Number" type="tel" tabindex="3" required>
@@ -136,7 +135,7 @@
                         </div>
                         <div class="input-group textarea">
                             <label for="message">Message</label>
-                            <textarea id="message" aria-label="write your message" name="message" placeholder="Tell us about what you need help with" tabindex="6" required></textarea>
+                            <textarea id="message" aria-label="write your message" name="message" placeholder="Write feedback here" tabindex="6" required></textarea>
                             <div aria-hidden="true" class="hover-box"></div>
                         </div>
                     <p class="form-submit">
