<update> img 11-15 added to gallery

--- a/projects.html
+++ b/projects.html
@@ -142,7 +142,7 @@
                      <picture>
                         <source media="(max-width: 600px)" srcset="/images/GalleryImg/gallery6.jpg">
                         <source media="(min-width: 601px)" srcset="/images/GalleryImg/gallery6-d.jpg">
-                        <img loading="lazy" decoding="async" src="/images/GalleryImg/gallery6-d.jpg" alt="clippers all over" width="420" height="629">
+                        <img loading="lazy" decoding="async" src="/images/GalleryImg/gallery6-d.jpg" alt="clippers all over" width="420" min-height="629">
                      </picture>
                 </div>
                 <div class="row">
@@ -156,15 +156,47 @@
                         <source media="(max-width: 600px)" srcset="/images/GalleryImg/gallery8.jpg">
                         <source media="(min-width: 601px)" srcset="/images/GalleryImg/gallery8-d.jpg">
                         <img loading="lazy" decoding="async" src="/images/GalleryImg/gallery8-d.jpg" alt="long on top aiwth short sides, slicked back" width="420" height="452">
-                     </picture>
-                     
-                     
+                     </picture> 
                      <picture>
                         <source media="(max-width: 600px)" srcset="/images/GalleryImg/gallery9.jpg">
                         <source media="(min-width: 601px)" srcset="/images/GalleryImg/gallery9-d.jpg">
                         <img loading="lazy" decoding="async" src="/images/GalleryImg/gallery9-d.jpg" alt="Classic short and spiky" width="420" height="629">
                      </picture>
                 </div>
+                <div class="row">
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="/images/GalleryImg/gallery11.jpg">
+                        <source media="(min-width: 601px)" srcset="/images/GalleryImg/gallery11-d.jpg">
+                        <img loading="lazy" decoding="async" src="/images/GalleryImg/gallery11-d.jpg" alt="Wavy slicked back" width="420"
+                            height="625">
+                    </picture>
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="/images/GalleryImg/gallery12.jpg">
+                        <source media="(min-width: 601px)" srcset="/images/GalleryImg/gallery12-d.jpg">
+                        <img loading="lazy" decoding="async" src="/images/GalleryImg/gallery12-d.jpg"
+                            alt="long on top aiwth short sides, slicked back" width="420" height="452">
+                    </picture>
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="/images/GalleryImg/gallery13.jpg">
+                        <source media="(min-width: 601px)" srcset="/images/GalleryImg/gallery13-d.jpg">
+                        <img loading="lazy" decoding="async" src="/images/GalleryImg/gallery13-d.jpg" alt="Classic short and spiky"
+                            width="420" height="629">
+                    </picture>
+                </div>
+                    <div class="row">
+                        <picture>
+                            <source media="(max-width: 600px)" srcset="/images/GalleryImg/gallery14.jpg">
+                            <source media="(min-width: 601px)" srcset="/images/GalleryImg/gallery14-d.jpg">
+                            <img loading="lazy" decoding="async" src="/images/GalleryImg/gallery14-d.jpg" alt="Wavy slicked back" width="420"
+                                height="625">
+                        </picture>
+                        <picture>
+                            <source media="(max-width: 600px)" srcset="/images/GalleryImg/gallery15.jpg">
+                            <source media="(min-width: 601px)" srcset="/images/GalleryImg/gallery15-d.jpg">
+                            <img loading="lazy" decoding="async" src="/images/GalleryImg/gallery15-d.jpg"
+                                alt="long on top aiwth short sides, slicked back" width="420" height="452">
+                        </picture>
+                    </div>
             </div>
         </section>
 
