<update> updated homepage header

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
         <section id="hero">
             <div class="hero-content">
                 <div class="heroText">
-                    <h1 id="home-h">Traditional Walk-In Barber Shop</h1>
+                    <h1 id="home-h">Traditional Walk-In and Appointments Barber Shop</h1>
+                    
+                    
                     <p>
                         An experienced barber offering quality cuts and restyles for reasonable prices.
                     </p>
@@ -155,7 +157,7 @@
         <section id="sidebyside" class="sidebyside">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Trusted Barber, Serving Chester for Over 10 years</h2>
+                    <h2 class="title">Trusted Barber, Serving Chester for Over 5 years</h2>
                      <p>
                          Nigel Tudor, has worked all over the world, from the glory days of 1990's Saudi Arabia, to touring the united kingdom offering
                          advice and guidance to up and coming salons and professionals. His love of motorcycles, dogs and football keeps him young and 
