<update> updated all html with privacy policy link.

--- a/contact.html
+++ b/contact.html
@@ -214,7 +214,13 @@
         <div class="credit">
             <span>Designed and Hand Coded by</span>
             <a href="https://github.com/VenexCon" target="_blank" rel="noopener">VenexCon</a>
-            <span class="copyright"> Copyright 2021 - Present</span></div>
+            <span class="copyright"> Copyright 2021 - Present</span>
+            <div class="privacyLink">
+                <a href="http://https://www.privacypolicytemplate.net/live.php?token=g5VHd7lelnr7lPmspAHBWn5l05wKI9u3">
+                    Privacy Policy
+                </a>
+            </div>
+        </div>
     </footer>
 
     <script defer src="./nav.js"></script>
