<hotfix> fixed broken privacy link

--- a/projects.html
+++ b/projects.html
@@ -260,7 +260,7 @@
             <a href="https://github.com/VenexCon" target="_blank" rel="noopener">VenexCon</a>
             <span class="copyright"> Copyright 2022 - Present</span>
             <div class="privacyLink">
-                <a href="http://https://www.privacypolicytemplate.net/live.php?token=g5VHd7lelnr7lPmspAHBWn5l05wKI9u3">
+                <a href="https://www.privacypolicytemplate.net/live.php?token=g5VHd7lelnr7lPmspAHBWn5l05wKI9u3">
                     Privacy Policy
                 </a>
             </div>
