<update> updated copy on index.html to include more keywords

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Swap our for actual link-->
-    <link rel="canonical" href="https://www.company.com/contact">
+    <link rel="canonical" href="https://www.primebarber.co.uk/contact.html">
 
     <meta name="description" content="Mens Barbers in Chester">
     <meta name="keywords" content="Barbers Mens Chester">
@@ -26,7 +26,7 @@
     <meta property="og:title" content="PRIME BARBERS"/>
     <meta property="og:description" content="Mens Barbers in Chester"/>
     <meta property="og:type" content="website" />
-    <meta property="og:url" content=""/>
+    <meta property="og:url" content="https://www.primebarber.co.uk/"/>
    
 
     <!--Favicons-->
@@ -216,7 +216,7 @@
             <a href="https://github.com/VenexCon" target="_blank" rel="noopener">VenexCon</a>
             <span class="copyright"> Copyright 2021 - Present</span>
             <div class="privacyLink">
-                <a href="http://https://www.privacypolicytemplate.net/live.php?token=g5VHd7lelnr7lPmspAHBWn5l05wKI9u3">
+                <a href="https://www.privacypolicytemplate.net/live.php?token=g5VHd7lelnr7lPmspAHBWn5l05wKI9u3https://www.privacypolicytemplate.net/live.php?token=g5VHd7lelnr7lPmspAHBWn5l05wKI9u3">
                     Privacy Policy
                 </a>
             </div>
