--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="PRIME BARBERS"/>
     <meta property="og:description" content="Mens Barbers in Chester"/>
     <meta property="og:type" content="website" />
-    <meta property="og:url" content=""/>
+    <meta property="og:url" content="https://www.primebarber.co.uk/"/>
    
 
     <!--Favicons-->
@@ -142,7 +142,7 @@
                 </picture>
                 <h2>Classic Cuts</h2>
                 <p>
-                    Classic, timeless and elegent haircuts available by appointment or walk-in.
+                    Classic, timeless and elegant haircuts available by appointment or walk-in.
                 </p>
             </div>
             <div class="card">
@@ -178,6 +178,8 @@
                          advice and guidance to up and coming salons and professionals. His love of motorcycles, dogs and football keeps him young and 
                          his approach modern.
                      </p>
+                     <p>Nigel now has his base of operations in Hoole, Chester. He has been based in Hoole for over 5 years and is renowned, friendly and competent barber & hair stylist.
+                        His barber shop located on Hoole's main high street offers modern styles with a friendly atmosphere.   </p>
                      <p>
                          <strong>Nigel's Passions:</strong>
                       </p>
