--- a/reviews.html
+++ b/reviews.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Swap our for actual link-->
-    <link rel="canonical" href="https://www.company.com/reviews">
+    <link rel="canonical" href="https://www.primebarber.co.uk/reviews.html">
 
     <meta name="description" content="Mens Barbers In Chester">
     <meta name="keywords" content="Barbers Mens Chester">
@@ -27,7 +27,7 @@
     <meta property="og:title" content="PRIME BARBERS" />
     <meta property="og:description" content="Mens Barbers in Chester" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://www.primebarber.co.uk/" />
    
 
     <!--Favicons-->
