--- a/reviews.html
+++ b/reviews.html
@@ -208,6 +208,24 @@
                          </picture>
                      </div>
                 </div>
+                <div class="review">
+                    <picture>
+                        <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
+                     </picture>
+                     <p>
+                        One of the best haircuts iv had in long time, very friendly, actually took time to cut my hair, and gave advice on how to style it!
+                     </p>
+                     <div class="star-group">
+                        <span class="name">Stuart Edwards<span class="desc">Customer</span></span>
+                         <picture>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                         </picture>
+                     </div>
+                </div>
                
             </div>
         </section>
